--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,6 @@ header .address p:first-child b {
 	border-bottom: 3px solid rgb(74,64,66);
 	border-right: 1px solid rgb(54,50,49);
 }
-
 .nav.navbar-nav li a {
 	color: rgb(249,249,211);
 	font-size: 14px;
@@ -150,7 +149,8 @@ header .address p:first-child b {
 	background-color: rgb(61,57,56);
 	color: rgb(246,243,210);
 }
-.nav.navbar-nav .active a:hover {
+.nav.navbar-nav .active a:hover,
+.nav.navbar-nav .active a:focus {
 	background-color: rgb(61,57,56);
 	color: rgb(249,249,211);
 }
@@ -161,7 +161,10 @@ header .address p:first-child b {
 .navbar-default .navbar-nav > .open > a:hover, 
 .navbar-default .navbar-nav > .open > a:focus {
 	background-color: rgb(74,64,66);
-	color: rgb(249,249,211);
+}
+.nav.navbar-nav .dropdown a:focus,
+.nav.navbar-nav .dropdown a:hover {
+	color: rgb(216,200,112);
 }
 .nav.navbar-nav .dropdown-menu {
 	background-color: rgb(74,64,66);
@@ -174,6 +177,14 @@ header .address p:first-child b {
 }
 .nav.navbar-nav .active .dropdown-menu a {
 	background-color: rgb(74,64,66);
+	border-bottom-color: rgb(61,57,56);
+}
+.nav.navbar-nav .active .dropdown-menu a:hover{
+	background-color: rgb(61,57,56);
+	border-bottom-color: rgb(61,57,56);
+	color: rgb(216,200,112);
+}
+.nav.navbar-nav .active .dropdown-menu li:hover {
 	border-bottom-color: rgb(74,64,66);
 }
 
@@ -238,6 +249,10 @@ header .address p:first-child b {
 .well.our_advantages figcaption span {
 	font-size: 1.2em;
 	color: rgb(213,202,112);
+	transition: all 0.4s linear;
+}
+.image_wrapper_main_page:hover + figcaption span {
+	color: red;
 }
 .label_main_page {
 	position: absolute;
@@ -289,16 +304,16 @@ header .address p:first-child b {
 	width: 40%;
 	float: left;
 	overflow: hidden;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 	margin-right: 30px;
 	padding-top: 20px;
+}
+.article_img_wrapper img {
+	width: 100%;
 }
 .o_salone_article {
 	padding: 10px 30px;
 	color: rgb(71,70,66);
-}
-.article_img_wrapper img {
-	width: 100%;
 }
 .o_salone_article h1 {
 	font-weight: bold;
@@ -310,7 +325,7 @@ header .address p:first-child b {
 	padding: 10px 30px;
 }
 .gallery.row .img_gallery_wrapper {
-	width: 90%;
+	width: 100%;
 	overflow: hidden;
 	height: 160px;
 	margin-bottom: 10px;
@@ -420,12 +435,31 @@ header .address p:first-child b {
 	border-radius: 3px;
 }
 
+
+.coordinates a[type="button"]:hover,
+.coordinates a[role="button"]:hover {
+	text-decoration: none;
+}
+.coordinates a[type="button"],
+.coordinates a[role="button"],
+.coordinates a[type="button"]:focus,
+.coordinates a[type="button"]:active,
+.coordinates a[role="button"]:focus,
+.coordinates a[role="button"]:active {
+	border: none;
+	background-color: #fff;
+	box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0);
+	border: none;
+	outline: none;
+	font-weight: bold;
+}
 /*ASIDE NAVIGATION-------------------------------------*/
 .aside_navigation {
 	display: block;
 	margin: 0 auto;
 	width: 90%;
-	padding: 15px;
+	padding: 15px 0 0 15px;
+	font-size: 15px;
 }
 .aside_navigation .btn_catalog {
 	display: block;
@@ -434,8 +468,10 @@ header .address p:first-child b {
 	color: rgb(15,15,15);
 	height: 35px;
 	padding-left: 15px;
+	position: relative;
 }
-.aside_navigation .btn_catalog:hover {
+.aside_navigation .btn_catalog:hover,
+.list_nav .list-item a:hover {
 	background-color: rgb(244,244,244);
 	cursor: pointer;
 }
@@ -450,6 +486,9 @@ header .address p:first-child b {
 .aside_navigation a {
 	color: rgb(15,15,15);
 }
+.aside_navigation a:hover {
+	text-decoration: none;
+}
 .list_nav {
 	margin-top: 10px;
 }
@@ -460,9 +499,14 @@ header .address p:first-child b {
 	height: 30px;
 	line-height: 30px;
 }
+.list_nav .list-item a {
+	padding: 3px 5px;
+}
+.catalog_list {
+	margin-top: 3px;
+}
 .aside_navigation .catalog_list .list-item.active a {
 	background-color: rgb(213,202,112);
-	padding: 3px 5px;
 }
 .aside_navigation .btn_catalog.discounts {
 	background-color: rgb(209,39,39);
@@ -482,10 +526,25 @@ header .address p:first-child b {
 	line-height: 29px;
 	text-align: center;
 }
+.aside_navigation .btn_catalog.discounts a:hover,
+.aside_navigation .btn_catalog.discounts a:focus,
+.aside_navigation .btn_catalog.discounts:hover  {
+	text-decoration: none;
+	background-color: rgb(151,34,39);
+}
+
 .aside_navigation .btn_catalog.selling a{
 	color: rgb(212,38,39);
 	font-size: 14px;
 	font-weight: bold;
+}
+.aside_navigation .caret_span {
+	position: absolute;
+	right: 25px;
+}
+.caret_upside_down {
+	-webkit-transform: rotate(180deg);
+	transform: rotate(180deg);
 }
 
 /*kitchens-----------------------------------------------*/
@@ -733,8 +792,18 @@ footer .address p:first-child {
 	overflow: hidden;
 	width: 100%;
 	margin: 50px auto;
+	padding: 0;
 }
 .modal.fade .modal-content  img {
 	width: 100%;
 	height: 100%;
 }
+button.close {
+	position: absolute;
+	right: 10px;
+	top: 5px;
+	color: #fff;
+	opacity: 1;
+}
+ #map-container { height: 450px }
+
